kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-web
spec:
  type: NodePort
  selector:
    app: homelab-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
